Update final versions of notebooks (Parts 1–3)
Updated all three notebooks (01_data_preparation, 02_eda_univariate, 03_eda_multivariate) with revised content, improved text, and visuals.
The files are named and numbered to reflect the logical order of the analysis steps.

--- a/notebooks/01_data_preparation.ipynb
+++ b/notebooks/01_data_preparation.ipynb
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "d48c006f-5bb4-434a-b6cf-e203e8c90241",
    "metadata": {},
    "outputs": [
@@ -2179,7 +2179,7 @@
        "24                    NaN                        NaN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "c45ab24e-3d44-4fff-a2a9-cba9c57d6e9d",
    "metadata": {},
    "outputs": [
@@ -2302,7 +2302,7 @@
        "22                   0.113014  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "2a4c7e1f-2c17-4469-84ec-8d24fd350f34",
    "metadata": {},
    "outputs": [
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "0cd6f6d7-8c44-459c-9742-0b90c5f37da0",
    "metadata": {},
    "outputs": [],
@@ -2360,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "a75475d1-5b90-4111-8ec6-32c80103ce20",
    "metadata": {},
    "outputs": [
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "id": "68455a6c-1e3a-4abf-984a-345024e8a8db",
    "metadata": {},
    "outputs": [
@@ -2581,7 +2581,7 @@
        "4                    0.163121  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,14 +2621,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c477af37-8752-40f9-802e-9139e6906aac",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2d03d24-07df-4294-9297-f2dce3990f79",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "---\n",
-    "## 6. Export Final Dataset with Aging Indicator\n",
-    "\n",
-    "To support future multivariate analysis, we now calculate the share of homes built before 1981 (`percent_40plus`) and save the updated dataset as a new file."
+    "# Save merged DataFrame as a Pickle file\n",
+    "merged_table.to_pickle(\"merged_housing_income_data.pkl\")\n",
+    "print(\"✅ Pickle file saved successfully.\")"
    ]
   },
   {
@@ -2636,7 +2637,8 @@
    "id": "796c8c42-c180-469f-96b3-ac9fb277d7ba",
    "metadata": {},
    "source": [
-    "## 6. Summary\n",
+    "---\n",
+    "## 5. Summary\n",
     "\n",
     "In this first notebook, we prepared the datasets that will serve as the foundation for our housing risk and regional disparity analysis. The steps included:\n",
     "\n",
@@ -2655,14 +2657,6 @@
     "\n",
     "This prepared file will now be used in **Notebook 2** to generate descriptive insights and regional comparisons."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0db6221b-014b-4d82-a217-f86af7e12ed5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
