--- a/notebooks/03_eda_multivariate.ipynb
+++ b/notebooks/03_eda_multivariate.ipynb
@@ -7,19 +7,17 @@
    "source": [
     "# Vancouver Housing Data 2025 – Part 3: Exploratory Data Analysis (EAD) – Multivariate\n",
     "\n",
-    "This notebook presents a **multivariate exploratory analysis** based on the univariate insights generated in Part 2.  \n",
-    "The objective is to investigate how housing age and income indicators interact across Metro Vancouver jurisdictions.\n",
+    "This notebook builds upon the univariate insights from **Part 2** to conduct a **multivariate exploratory analysis** of housing and income indicators across Metro Vancouver municipalities.\n",
     "\n",
-    "We move beyond individual variable distributions to examine potential relationships, patterns, and groupings that may emerge when analyzing the variables together.\n",
+    "The goal is to uncover potential interactions and patterns between housing age and income metrics, shedding light on broader spatial and socioeconomic dynamics.\n",
     "\n",
-    "Key techniques explored in this notebook include:\n",
+    "Rather than examining each variable in isolation, this phase of the analysis focuses on how variables relate to one another across jurisdictions.\n",
     "\n",
-    "- Cross-variable visualizations and correlation analysis  \n",
-    "- Grouping jurisdictions by housing age and income characteristics  \n",
-    "- Dimensionality reduction using **Principal Component Analysis (PCA)**  \n",
-    "- Clustering municipalities with similar housing and income profiles\n",
+    "### 🔍 Key Approaches\n",
     "\n",
-    "These analyses aim to uncover **hidden structures and regional clusters**, providing actionable insights for urban planning, housing policy, and targeted interventions.\n",
+    "- 📊 Cross-variable scatter plots and correlation analysis  \n",
+    "- 🏘️ Categorization of municipalities by income and housing age  \n",
+    "- 📈 Comparative crosstabs to identify group-level patterns\n",
     "\n",
     "---\n",
     "\n",
@@ -32,7 +30,7 @@
     "In **Part 1**, we built the cleaned dataset from Metro Vancouver Housing Data Book 2025.  \n",
     "In **Part 2**, we conducted a univariate descriptive analysis that highlighted major regional contrasts in both housing and income indicators.\n",
     "\n",
-    "In this notebook, we connect these indicators to explore relationships, reveal clusters, and reduce dimensionality for deeper insights.\n",
+    "In this notebook, we connect housing age and income indicators to explore relationships and highlight group-level patterns that may inform urban and economic planning.\n",
     "\n",
     "---\n",
     "\n",
@@ -40,8 +38,6 @@
     "\n",
     "- Visualize and quantify relationships between housing age and income indicators  \n",
     "- Analyze correlations across selected variables  \n",
-    "- Apply **Principal Component Analysis (PCA)** to reduce dimensionality and identify key variation axes  \n",
-    "- Perform clustering to group municipalities with similar profiles  \n",
     "- Interpret results to support region-specific recommendations and policy design\n",
     "\n",
     "---\n",
@@ -63,9 +59,7 @@
     "\n",
     "### Final Output\n",
     "\n",
-    "This multivariate analysis enables a richer understanding of regional dynamics by combining housing and income indicators.  \n",
-    "It helps uncover municipality clusters with shared characteristics, highlights outliers, and reduces data complexity.  \n",
-    "The results will support targeted housing strategies and serve as a foundation for interactive dashboards or advanced modeling in future stages.\n",
+    "This multivariate analysis provides a richer understanding of regional dynamics by jointly examining housing and income indicators. It helps surface shared patterns across municipalities, highlight unique cases, and set the groundwork for targeted housing strategies, interactive dashboards, or more advanced modeling in future stages.\n",
     "\n",
     "---"
    ]
@@ -1054,14 +1048,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bd7fb2f-8acb-4af2-bd6b-ff69c10f886d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1080,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
