Update EDA Notebooks with Improved Charts
- Updated 01_data_preparation.ipynb: finalized cleaning and added construction period features.
- Revised 02_eda_univariate.ipynb: improved visualizations for housing stock aging and income distribution.
- Updated 03_eda_multivariate.ipynb: added annotated scatterplots, refined correlation analysis, and included Metro Vancouver benchmarks.

These changes reflect the final structure before transitioning to clustering analysis.

--- a/notebooks/01_data_preparation.ipynb
+++ b/notebooks/01_data_preparation.ipynb
@@ -2622,10 +2622,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a2d03d24-07df-4294-9297-f2dce3990f79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Pickle file saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save merged DataFrame as a Pickle file\n",
     "merged_table.to_pickle(\"merged_housing_income_data.pkl\")\n",
@@ -2675,7 +2683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
